listCatalog report wrong collection type for timeseries collection

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: Catalog
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2025-07-21, CAR Team 2025-08-04
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When listCatalog is invoked on admin database (return information for all collections in the cluster) it correctly  return collection type "timeseries". 

      This does not happen when listCatalog is invoked directly on the timeseries namespace. In this case the collection type is wrongly reported as `collection` even though the collection is timeseries collection.

      The goal of this ticket is to fix this bug and remove the TODOs associated with this ticket.

            Assignee:
            Joan Bruguera Micó
            Reporter:
            Tommaso Tocci
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: