SERVER-103776 listCatalog report wrong collection type for timeseries collection (#39433)

GitOrigin-RevId: e472dce950da0ae43f286be6e454c787e93bc56b